# rust-webapp

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: main.yml
resources/fluentd/: Dockerfile
resources/fluentd/etc/: fluentd.conf
resources/prometheus/: prometheus.yml
resources/sql/: 2023021900_create_hello_message.sql  2023021901_insert_hello_message.sql
src/: main.rs
src/handler/: hello.rs  hello_handler.rs  mod.rs
src/logger/: mod.rs
src/registry/: mod.rs
src/repository/: hello_repository.rs  mod.rs
src/service/: hello_service.rs
