[package]
name = "rust-webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.151", features = ["derive"] }
log = "0.4.0"
fern = "0.6.0"
chrono = "0.4.19"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql" ] }
futures = "0.3.26"
actix-web-prometheus = "0.1.2"
